Fix welcome banner overflow problem on mobile site.

--- a/client/src/css/Signup.css
+++ b/client/src/css/Signup.css
@@ -22,7 +22,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex: 1;
+    flex: 1 1 auto;
     padding: 20px;
     text-align: center; }
     .signup-container .welcome-banner h1 {
@@ -39,7 +39,7 @@
       font-weight: 400;
       text-shadow: 1px 1px 2px #7aadb8; }
   .signup-container .form-area {
-    flex: 1; }
+    flex: 1 1 auto; }
     @media only screen and (min-width: 1200px) {
       .signup-container .form-area {
         margin-top: 15%; } }
@@ -47,7 +47,6 @@
       display: flex;
       flex-direction: column;
       position: relative;
-      top: -15%;
       width: 90%;
       margin: 0 auto;
       padding: 0 20px 3em 20px;
@@ -56,6 +55,7 @@
       background: white; }
       @media only screen and (min-width: 1200px) {
         .signup-container .form-area .signup-form {
+          top: -15%;
           width: 120%;
           right: 10%;
           border-radius: 20px; } }
@@ -77,7 +77,7 @@
     .signup-container .form-area .submit-proxy-button {
       display: block;
       position: relative;
-      top: calc(0em - 1em - 15%);
+      top: calc(0em - 1em);
       width: 70%;
       margin: 0 auto;
       height: 2em;
@@ -88,5 +88,8 @@
       font-size: 1.4rem;
       line-height: 2em;
       text-align: center; }
+      @media only screen and (min-width: 1200px) {
+        .signup-container .form-area .submit-proxy-button {
+          top: calc(0em - 1em - 15%); } }
     .signup-container .form-area .submit-proxy-button:hover {
       background: #365c63; }
